--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
+\hyphenation{contributed insightful inputs practical understanding comprehensive Niraula supervisor enriching discussions willingness acknowledge}
 \begin{document}
 
 \pagenumbering{roman}
@@ -7,6 +8,7 @@
 \newpage
 
 \include{title}
+\include{acknowledgement}
 
 \addcontentsline{toc}{section}{Acknowledgment}
 % Your acknowledgment content goes here.
