--- a/title.tex
+++ b/title.tex
@@ -1,29 +1,34 @@
 \begin{center}
 	\thispagestyle{empty}
-	\Large\textbf{TRIBHUVAN UNIVERSITY}\\
-	\Large\textbf{INSTITUTE OF ENGINEERING }\\
-	\vspace{0.2in}
-	\large{\textbf{Khwopa College Of Engineering}\\}
-	\normalsize{Libali, Bhaktapur\\}
+	\large\textbf{TRIBHUVAN UNIVERSITY}\\
+	\large\textbf{INSTITUTE OF ENGINEERING }\\
+	\vspace{0.1in}
+	\LARGE{\textbf{Khwopa College Of Engineering}\\}
+	\vspace{0.1cm}
+%	\normalsize{Libali, Bhaktapur\\}
 	\large\textbf{Department of Computer Engineering}
-	\vspace{0.2in}
+	\vspace{0.4in}
 	\begin{figure}[h]
 			\centering
-				\includegraphics[width=0.25\textwidth]{img/Khwopalogo.jpg}
+				\includegraphics[width=0.3\textwidth]{img/Khwopalogo.jpg}
 	\end{figure}
 	
-	\vspace{0.2in}
-	\large{A PROPOSAL ON\\\textbf{NEPALI SENTIMENT ANALYSIS USING NEURAL NETWORKS}\\}
+	\vspace{0.4in}
+	\large{\textbf{A REPORT ON}\\Instrumentation-II Case Study\\}
 	
-	\vspace{0.2in}
-	\large{\textit{Submitted in partial fulfillment of the requirements for the degree\\}}
+	\vspace{0.5in}
+%	\large{\textit{Submitted in partial fulfillment of the requirements for the degree\\}}
 	
-	\vspace{0.2in}
-	\large{\textbf{BACHELOR OF COMPUTER ENGINEERING}\\}
+%	\large{\textbf{BACHELOR OF COMPUTER ENGINEERING}\\}
 	
-	\vspace{0.2in}
-	\large{Submitted by}\\
-	\begin{tabular}{p{3.2in}p{1.2in}}
+	\large{\textbf{Visit Undertaken at}\\}
+		\normalsize{Gorkha Eco Red Bricks Company Pvt. Ltd.\\
+			Mahendrajyoti, Nepal\\
+		}
+		\vspace{0.5in}
+	\large{\textbf{Submitted by:}}\\
+	\vspace{0.2cm}
+	\begin{tabular}{p{2in}p{1.2in}}
 		\hspace{0.3cm}Manish Pyakurel & KCE077BCT020\\
 		\hspace{0.3cm}Rupak Neupane & KCE077BCT028\\
 		\hspace{0.3cm}Sarjyant Shrestha & KCE077BCT033\\
@@ -31,13 +36,12 @@
 	 \vspace{0.2in}
 	\end{tabular}
 	\\
-	\vspace{0.5cm}
-	\large{\textbf{Under the Supervision of}\\}
-		\normalsize{Er.Dinesh Gothe\\
-			Department Of Computer Engineering\\
-		}
-		\vspace{1cm}
-	\large{\textbf{Khwopa College Of Engineering}\\}
+%	\vspace{0.5cm}
+%	\large{\textbf{Under the Supervision of}\\}
+%		\normalsize{Er.Dinesh Gothe\\
+%			Department Of Computer Engineering\\
+%		}
+		\vspace{0.5in}
 		\normalsize{Libali, Bhaktapur\\
 		2023-08-24	
 	}
