block diagram added

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
+\usepackage[margin=1.5  in]{geometry}
 \hyphenation{contributed insightful inputs practical understanding comprehensive Niraula supervisor enriching discussions willingness acknowledge}
 \begin{document}
 
@@ -9,9 +10,6 @@
 
 \include{title}
 \include{acknowledgement}
-
-\addcontentsline{toc}{section}{Acknowledgment}
-% Your acknowledgment content goes here.
 
 \newpage
 
@@ -25,25 +23,82 @@
 % Your introduction content goes here.
 
 \subsection{About Organization}
-% Content about the brick factory organization.
+After a dedicated and focused effort spanning a year and a half, Gorkha Red Brick Pvt. Ltd. has celebrated a significant achievement in the form of the newly launched product "Gorkha Chinese Itta." This accomplishment stands as a testament to their commitment to innovation within Nepal's brick-making industry. Brick production is deeply embedded in Nepal's cultural heritage. Bricks have been an essential building material, especially in regions near the Kathmandu Valley. In this context, Gorkha Red Brick's recent accomplishment signifies a meaningful progression in the tradition of brick manufacturing.
 
-\subsection{Main Ingredients for Bricks}
-% Information about the main ingredients used in brick production.
+\vspace{0.4cm}
+What truly sets Gorkha Red Brick apart is their embrace of modern technology. The introduction of Tunnel Kiln Technology represents a groundbreaking advancement in brick production. With an impressive daily capacity of 100,000 bricks, this cutting-edge approach has revolutionized the manufacturing process.
+The operation of Tunnel Kiln involves three distinct zones. In the preheating phase, the bricks receive initial warmth. The firing phase, which occurs in the central part of the tunnel, is where the transformation takes place. Finally, the cooling zone ensures the bricks are prepared for use.
+While the technology is undeniably advanced, its eco-friendliness is equally noteworthy. Gorkha Red Brick's commitment to environmental sustainability is evident in their choice of energy-efficient methods. By prioritizing this approach, they are not only meeting market demands but also contributing positively to the environment.
 
-\subsection{Production Process}
-% Information about the brick production process.
+\vspace{0.4cm}
+Gorkha Red Brick's journey to this achievement has been guided by a clear vision. Their focus on innovation is a reflection of their determination to evolve beyond traditional brick-making practices. In successfully bridging the gap between tradition and modernity, they have not only created a superior product but also illuminated a pathway for the industry's future.
+This accomplishment speaks volumes about Gorkha Red Brick's value as a forward-looking enterprise. Their achievement extends beyond bricks, serving as an embodiment of progress and responsible production. With every brick produced using the Tunnel Kiln Technology, they are shaping a future that is not only promising but also sustainable.
 
+\newpage
+\subsection{Composition of bricks: Function of ingredients}
+Bricks are rectangular units of construction material. Bricks are used in masonry construction, walls, and pavements. It is used as a substitute of stone, where the stone is not readily available. Brick chips are often used as coarse aggregate in the concrete mix.
+Percentage of Constituents of Brick (Weight Basis).
+There are six major ingredients of brick. The general percentage of these ingredients in brick is given below:\\
+Ingredient	Percentage in brick
+Silica (SiO2)	55\%\\
+Alumina (Al2O3)	30\%\\
+Iron Oxide (Fe2O3)	8\%\\
+Magnesia (MgO)	5\%\\
+Lime(CaO)	1\%\\
+Organic Matter	1\%\\
+\vspace{0.1cm}\\
+Chief Ingredients of Brick and Their Functions
+Silica (Sand) and Alumina (Clay), these two are the most prominent ingredients in brick clay. When mixed with water in proper proportions, it gains plasticity. The plastic mass can be easily molded and dried. It should not go through cracking, shrinkage or warping.\\
+\vspace{0.1cm}\\
+Alumina\\
+Alumina is the main constituent of clay. It acts as a cementing material in raw brick. Brick clay is plastic due to the presence of alumina. This plasticity ensures that bricks can be molded. An excess amount of alumina in clay may cause the bricks to shrink, warp or crack on drying and burning as any other cementing material.\\
+\vspace{0.1cm}\\
+Silica\\
+Good quality bricks contain 50-60\% silica. It is present in both free and combined form. As frees sand, it remains mechanically mixed with clay. In combined form, it reacts with alumina to form aluminosilicates. Silica prevents raw bricks from cracking, shrinking and warping. The higher the proportion of sand, the more and shapely and uniform in texture will be the brick. Although, excess silica destroys cohesion between the brick clay particles and makes brick brittle and weak. The durability of bricks largely depends upon the proper proportion of silica and alumina.\\
+\vspace{0.1cm}\\
+Lime\\
+Bricks should contain a little amount of finely powdered lime. It enables silica (of a required portion) to melt at the furnace temperature of 1650oC and binds the particles of brick together resulting in strong and durable bricks. At about 1100 degC, lime acts as a catalyst to elevate the furnace temperature to 1650oC at which silica fuses. This slightly fused silica works as a strong cementing material. Excess lime in brick clay will cause vitrification of bricks. It causes bricks to melt, as more than the required amount of silica will fuse. The bricks then lose their shape and become disfigured.\\
+\vspace{0.1cm}\\
+Iron Oxide\\
+Bricks contain a small quantity of Iron Oxide. Iron Oxide acts a flux like lime, thus helps silica to fuse at low temperature. It imparts a red color to bricks upon burning. Iron also increases the durability and impermeability of the bricks.\\
+\vspace{0.1cm}\\
+Magnesia\\
+A small proportion of magnesium decreases shrinkage and gives a yellow tint to the bricks. An excess amount of it causes bricks to decay.\\
+\vspace{0.1cm}\\
+Harmful Ingredients of Brick\\
+Lime\\
+Excess lime melts the bricks and disfigures it. If CaCO3 exists (in the purest form, i.e., if it contains at least 95\% CaO) in lime-lump in brick clay, it converts into quicklime on burning. When these bricks come in contact with water, quicklime slakes and expands. And causes disintegration of bricks.\\
+\vspace{0.1cm}\\
+Alkalis\\
+Alkalis are mainly salt of Sodium (Na) and Potassium (K). It acts as a flux in the kiln and causes fusion, warping, and twisting of bricks. Alkalis absorb moisture from the atmosphere and cause dampness and efflorescence in bricks (because of the presence of hygroscopic salts, e.g., CaCl2, MgCl2, etc.).\\
+\vspace{0.1cm}\\
+Pebbles, Stones and Gravels\\
+Their presence does not allow thorough mixing of earth, thus the bricks produced are weaker. Such bricks cannot be broken at the desired section and they break very irregularly.\\
+\vspace{0.1cm}\\
+Iron Pyrites (FeS)\\
+Iron Pyrites causes crystallization and disintegration of bricks while burning. It discolors bricks in the form of black slag.\\
+\vspace{0.1cm}\\
+Organic Matter\\
+Organic matter in bricks makes bricks porous resulting in low density and weaker bricks production.\\
+
+\newpage
 \section{Brick Manufacturing Process}
 % Information about the manufacturing process of bricks.
 
 \subsection{Block Diagram}
 % Description of the block diagram of the brick manufacturing process.
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=1\textwidth]{img/blank diagram.png}
+  \caption{Block diagram for brick manufacture process}
+\end{figure}
 
 \subsection{Process Flow for Brick Manufacture}
 % Detailed explanation of the brick manufacturing process flow.
-
+\newpage
 \section{Recommendations of the System}
 % Recommendations for improving the brick manufacturing process.
+
 
 \subsection{For Packaging of Bricks}
 % Recommendations related to brick packaging.
