block diagram done

--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@ Organic matter in bricks makes bricks porous resulting in low density and weaker
 % Description of the block diagram of the brick manufacturing process.
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{img/blank diagram.png}
+  \includegraphics[width=1\textwidth]{img/block diagram.png}
   \caption{Block diagram for brick manufacture process}
 \end{figure}
 
