added few process of brick making

--- a/main.tex
+++ b/main.tex
@@ -8,8 +8,8 @@
 
 \newpage
 
-\include{title}
-\include{acknowledgement}
+\include{content/title}
+\include{content/acknowledgement}
 
 \newpage
 
@@ -19,9 +19,9 @@
 \newpage
 \pagenumbering{arabic}
 
-\include{about}
-\include{composition}
-\include{blockdiagram}
+\include{content/about}
+\include{content/composition}
+\include{content/blockdiagram}
 
 \newpage
 \section{Recommendations of the System}
