cleaned main folder

--- a/content/blockdiagram.tex
+++ b/content/blockdiagram.tex
@@ -13,7 +13,7 @@
 Following are the basic steps of manufacturing bricks:
 \begin{enumerate}
 \item Clay Preparation
-\item Compact Formation
+\item Cake Molding
 \item Drying
 \item Kiln Firing
 \item Gradual Cooling
@@ -26,7 +26,7 @@ First, large chunks of clay are strained using a big strainer. This strainer bre
 
 Once the clay is roughly filtered, a suitable amount of soft rocks is added to it. The mixture goes through another filtering process. After the filtering is good enough, the mixture is further processed by hammering and thorough mixing to create a finer blend. A small amount of coal is mixed into this fine mixture. This mixture then goes through another feeder, entering mixing machines. Multiple mixing machines ensure proper blending of the clay. Water is also added to the clay in these machines to create a dough-like mixture.
 
-\subsection*{Compact Formation}
+\subsection*{Cake Molding}
 The compact form of clay, molded into brick-like shapes, is known as a "cake." This cake is a vital starting point in the brick-making process. The clay, resembling dough in its texture, is carefully fed through a machine that works to create a consistent and tightly packed structure of clay. This process ensures that the clay is ready for the next steps.
 
 Following this preparation, the clay goes through a precision-cutting phase utilizing a pressure wire cutter. This step results in the clay being divided into smaller lengths, setting the stage for the formation of individual bricks. Each length of clay, once cut by this machine, yields approximately 8 separate bricks.
@@ -34,3 +34,5 @@ Following this preparation, the clay goes through a precision-cutting phase util
 As these batches of bricks take shape, a specialized mechanism steps in to lift and position them onto a waiting cart. Each cart is made to carry a good number of bricks, fitting in dimensions of about 30 by 12 by 14. The bricks are stacked alternatively to ensure stability. These carts, filled with bricks ready for further processing, are then set into motion by automated machinery.
 
 \subsection*{Drying}
+
+\subsubsection*{Natural Drying}
