preheating done with align

--- a/content/blockdiagram.tex
+++ b/content/blockdiagram.tex
@@ -21,18 +21,53 @@ Following are the basic steps of manufacturing bricks:
 
 \newpage
 
-\subsection*{Clay Processing}
+\subsubsection{Clay Processing}
 First, large chunks of clay are strained using a big strainer. This strainer breaks down the big chunks into smaller pieces. These smaller pieces then pass through a feeder machine. The clay is moved along a rubber conveyor belt to filter out things like grass and unwanted debris. On different parts of the rubber conveyor belt, there are strong magnets placed above to remove any metal from the clay.
 
 Once the clay is roughly filtered, a suitable amount of soft rocks is added to it. The mixture goes through another filtering process. After the filtering is good enough, the mixture is further processed by hammering and thorough mixing to create a finer blend. A small amount of coal is mixed into this fine mixture. This mixture then goes through another feeder, entering mixing machines. Multiple mixing machines ensure proper blending of the clay. Water is also added to the clay in these machines to create a dough-like mixture.
 
-\subsection*{Cake Molding}
+\subsubsection{Cake Molding}
 The compact form of clay, molded into brick-like shapes, is known as a "cake." This cake is a vital starting point in the brick-making process. The clay, resembling dough in its texture, is carefully fed through a machine that works to create a consistent and tightly packed structure of clay. This process ensures that the clay is ready for the next steps.
 
 Following this preparation, the clay goes through a precision-cutting phase utilizing a pressure wire cutter. This step results in the clay being divided into smaller lengths, setting the stage for the formation of individual bricks. Each length of clay, once cut by this machine, yields approximately 8 separate bricks.
 
 As these batches of bricks take shape, a specialized mechanism steps in to lift and position them onto a waiting cart. Each cart is made to carry a good number of bricks, fitting in dimensions of about 30 by 12 by 14. The bricks are stacked alternatively to ensure stability. These carts, filled with bricks ready for further processing, are then set into motion by automated machinery.
 
-\subsection*{Drying}
+\subsubsection{Drying}
+There are multiple drying steps as explained below:
+\subparagraph{Natural Drying}
+\begin{adjustwidth}{1.5em}{0em}
+\vspace{0.1cm}
+  This first stage of natural drying is done right after a cart is fully stacked with bricks. The natural drying process is done for about 12 - 24 hours. This helps to remove moisture from the brick. The natural drying process doesn't completely remove all the moisture.
+\end{adjustwidth}
 
-\subsubsection*{Natural Drying}
+
+
+\subparagraph{Preheating}
+\begin{adjustwidth}{1.5em}{0em}
+In this stage the stacks of brick are preheated to make sure all the moisture are remove from the bricks. It is very crucial to remove moisture from the brick for following reasons:
+
+\vspace{0.1cm}
+\textit{Enhanced Strength:}
+ Excess moisture weakens the structural integrity of bricks. By \begin{adjustwidth}{1.5em}{0em}removing moisture, the bricks become denser and stronger, making them more resilient and suitable for construction.
+ \vspace{0.1cm}
+\end{adjustwidth}
+
+\textit{Preventing Cracking:}
+ During firing in the kiln, residual moisture can turn into steam, \begin{adjustwidth}{1.5em}{0em}leading to cracks or even explosions in the bricks. Thorough drying prevents such issues by ensuring that moisture is removed before the firing process.
+\end{adjustwidth}
+
+\textit{Uniform Firing:}
+ Moisture in bricks can cause uneven heating during firing, leading \begin{adjustwidth}{1.5em}{0em}to inconsistencies in color, texture, and strength. Properly dried bricks ensure a more uniform and desirable end product.
+ \vspace{0.1cm}
+\end{adjustwidth}
+
+\textit{Reduced Shrinkage:}
+ Moisture causes bricks to shrink during the firing process, which \begin{adjustwidth}{1.5em}{0em}can result in variations in size and shape. Drying minimizes shrinkage, leading to more standardized and consistent bricks.
+ \vspace{0.1cm}
+\end{adjustwidth}
+
+\textit{Efficient Firing:} Drier bricks require less energy to heat during firing, making the \begin{adjustwidth}{1.5em}{0em}process more energy-efficient and cost-effective.
+ \vspace{0.1cm}
+\end{adjustwidth}
+\end{adjustwidth}
