--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage[margin=1.5  in]{geometry}
+\usepackage{changepage}
+\setcounter{secnumdepth}{4} % Set the depth for numbering
 \hyphenation{contributed insightful inputs practical understanding comprehensive Niraula supervisor enriching discussions willingness acknowledge}
 \begin{document}
 
@@ -12,7 +14,6 @@
 \include{content/acknowledgement}
 
 \newpage
-
 \tableofcontents
 \addcontentsline{toc}{section}{Table of Contents}
 
