--- a/content/blockdiagram.tex
+++ b/content/blockdiagram.tex
@@ -15,7 +15,7 @@ Following are the basic steps of manufacturing bricks:
 \item Clay Preparation
 \item Cake Molding
 \item Drying
-\item Kiln Firing
+\item Firing 
 \item Gradual Cooling
 \end{enumerate}
 
@@ -55,6 +55,7 @@ In this stage the stacks of brick are preheated to make sure all the moisture ar
 
 \textit{Preventing Cracking:}
  During firing in the kiln, residual moisture can turn into steam, \begin{adjustwidth}{1.5em}{0em}leading to cracks or even explosions in the bricks. Thorough drying prevents such issues by ensuring that moisture is removed before the firing process.
+\vspace{0.1cm}
 \end{adjustwidth}
 
 \textit{Uniform Firing:}
@@ -64,10 +65,22 @@ In this stage the stacks of brick are preheated to make sure all the moisture ar
 
 \textit{Reduced Shrinkage:}
  Moisture causes bricks to shrink during the firing process, which \begin{adjustwidth}{1.5em}{0em}can result in variations in size and shape. Drying minimizes shrinkage, leading to more standardized and consistent bricks.
- \vspace{0.1cm}
+\vspace{0.1cm}
 \end{adjustwidth}
 
 \textit{Efficient Firing:} Drier bricks require less energy to heat during firing, making the \begin{adjustwidth}{1.5em}{0em}process more energy-efficient and cost-effective.
- \vspace{0.1cm}
+\vspace{0.1cm}
 \end{adjustwidth}
 \end{adjustwidth}
+\vspace{0.1cm}
+
+\subsubsection{Firing}
+Following the completion of the preheating stage, the stack of bricks is introduced into the firing tunnel. Here, the bricks are subjected to firing at temperatures of approximately 900°C. The temperature range within the tunnel can fluctuate between 900°C and 950°C, influenced by the surrounding environmental conditions. The firing process persists for roughly an hour per stack of bricks. Throughout this duration, the coal contained within the bricks undergoes combustion, leading to chemical changes. Notably, the iron content in the bricks transforms into iron oxide, imparting orange hue to the bricks.
+
+\vspace{0.1cm}
+The temperature within the tunnel is monitored from a designated room. A monitoring system displays the temperature readings from various segments of the Drying and Firing Tunnel. For temperature measurement, Type K thermocouple sensors are positioned above the tunnel, capable of gauging a range up to 0-1200\degree C. Additionally, each tunnel features approximately 9 small openings for direct monitoring. Within the tunnel, two fans play essential roles—one functions as an exhaust fan, while the other facilitates the circulation of air into the drying tunnel. The heat generated in the firing tunnel is channeled into the drying tunnel to preheat the bricks. The velocity of the fan is regulated using a VFD (Variable Frequency Drive), a motor controller capable of altering motor speed and consequently adjusting fan speed.
+
+\subsubsection{Gradual Cooling and Loading}
+After the bricks undergo the heating process, they need to cool down gradually. This cooling phase takes place by letting the bricks interact with the air around them. This natural cooling is crucial to prevent the bricks from becoming too brittle or prone to cracking. It allows the bricks to adjust to the surrounding temperature and conditions in a balanced way.
+
+Once the cooling process is complete and the bricks have reached a stable state, they are prepared for transportation. Loading the cooled bricks onto transportation vehicles requires careful handling to avoid any damage that could weaken the bricks. This loading process ensures that the bricks maintain their strength and structural integrity during transit.
