--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,9 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage{graphicx}
-\usepackage[margin=1.5  in]{geometry}
+\usepackage{textcomp}
+\usepackage[margin=2.5cm]{geometry}
 \usepackage{changepage}
+\usepackage{gensymb}
 \setcounter{secnumdepth}{4} % Set the depth for numbering
 \hyphenation{contributed insightful inputs practical understanding comprehensive Niraula supervisor enriching discussions willingness acknowledge}
 \begin{document}
