--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage[margin=2.5cm]{geometry}
