--- a/content/blockdiagram.tex
+++ b/content/blockdiagram.tex
@@ -54,7 +54,7 @@ In this stage the stacks of brick are preheated to make sure all the moisture ar
 \end{adjustwidth}
 
 \textit{Preventing Cracking:}
- During firing in the kiln, residual moisture can turn into steam, \begin{adjustwidth}{1.5em}{0em}leading to cracks or even explosions in the bricks. Thorough drying prevents such issues by ensuring that moisture is removed before the firing process.
+ During firing in the kiln, residual moisture can turn into \begin{adjustwidth}{1.5em}{0em}steam, leading to cracks or even explosions in the bricks. Thorough drying prevents such issues by ensuring that moisture is removed before the firing process.
 \vspace{0.1cm}
 \end{adjustwidth}
 
@@ -64,7 +64,7 @@ In this stage the stacks of brick are preheated to make sure all the moisture ar
 \end{adjustwidth}
 
 \textit{Reduced Shrinkage:}
- Moisture causes bricks to shrink during the firing process, which \begin{adjustwidth}{1.5em}{0em}can result in variations in size and shape. Drying minimizes shrinkage, leading to more standardized and consistent bricks.
+ Moisture causes bricks to shrink during the firing process, \begin{adjustwidth}{1.5em}{0em}which can result in variations in size and shape. Drying minimizes shrinkage, leading to more standardized and consistent bricks.
 \vspace{0.1cm}
 \end{adjustwidth}
 
