--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \include{content/about}
 \include{content/composition}
 \include{content/blockdiagram}
-
+\include{content/photos}
 \newpage
 \section{Recommendations of the System}
 % Recommendations for improving the brick manufacturing process.
