photo gallery done

--- a/content/photos.tex
+++ b/content/photos.tex
@@ -17,14 +17,28 @@
 \newpage
 \begin{figure}[h]
   \centering
-    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7624.HEIC.png}\hspace{5em}
-    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7625.HEIC.png}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7640.HEIC.png}\hspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7642.HEIC.png}
 
-    \vspace{5em}
-    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7629.HEIC.png}\hspace{5em}
-    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7634.HEIC.png}
+    \vspace{1em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7644.HEIC.png}\hspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7665.HEIC.png}
 
-    \vspace{5em}
+    \vspace{1em}
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7638.HEIC.png}\hspace{5em}
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7641.HEIC.png}
+\end{figure}
+
+\begin{figure}[h]
+  \centering
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7647.HEIC.png}\hspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7663.HEIC.png}
+
+    \vspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7655.HEIC.png}\hspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7658.HEIC.png}
+
+    \vspace{2em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7660.HEIC.png}\hspace{5em}
+    \includegraphics[width=0.4\textwidth]{img/photos/IMG_7662.HEIC.png}
 \end{figure}
