--- a/content/about.tex
+++ b/content/about.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
 \subsection{About Organization}
-After a dedicated and focused effort spanning a year and a half, Gorkha Red Brick Pvt. Ltd. has celebrated a significant achievement in the form of the newly launched product "Gorkha Chinese Itta." This accomplishment stands as a testament to their commitment to innovation within Nepal's brick-making industry. Brick production is deeply embedded in Nepal's cultural heritage. Bricks have been an essential building material, especially in regions near the Kathmandu Valley. In this context, Gorkha Red Brick's recent accomplishment signifies a meaningful progression in the tradition of brick manufacturing.
+After a dedicated and focused effort spanning a year and a half, Gorkha Eco Brick Pvt. Ltd. has celebrated a significant achievement in the form of the newly launched product "Gorkha Chinese Itta." This accomplishment stands as a testament to their commitment to innovation within Nepal's brick-making industry. Brick production is deeply embedded in Nepal's cultural heritage. Bricks have been an essential building material, especially in regions near the Kathmandu Valley. In this context, Gorkha Red Brick's recent accomplishment signifies a meaningful progression in the tradition of brick manufacturing.
 
 \vspace{0.4cm}
-What truly sets Gorkha Red Brick apart is their embrace of modern technology. The introduction of Tunnel Kiln Technology represents a groundbreaking advancement in brick production. With an impressive daily capacity of 100,000 bricks, this cutting-edge approach has revolutionized the manufacturing process.
+What truly sets Gorkha Eco Brick apart is their embrace of modern technology. The introduction of Tunnel Kiln Technology represents a groundbreaking advancement in brick production. With an impressive daily capacity of 100,000 bricks, this cutting-edge approach has revolutionized the manufacturing process.
 The operation of Tunnel Kiln involves three distinct zones. In the preheating phase, the bricks receive initial warmth. The firing phase, which occurs in the central part of the tunnel, is where the transformation takes place. Finally, the cooling zone ensures the bricks are prepared for use.
-While the technology is undeniably advanced, its eco-friendliness is equally noteworthy. Gorkha Red Brick's commitment to environmental sustainability is evident in their choice of energy-efficient methods. By prioritizing this approach, they are not only meeting market demands but also contributing positively to the environment.
+While the technology is undeniably advanced, its eco-friendliness is equally noteworthy. Gorkha Eco Brick's commitment to environmental sustainability is evident in their choice of energy-efficient methods. By prioritizing this approach, they are not only meeting market demands but also contributing positively to the environment.
 
 \vspace{0.4cm}
-Gorkha Red Brick's journey to this achievement has been guided by a clear vision. Their focus on innovation is a reflection of their determination to evolve beyond traditional brick-making practices. In successfully bridging the gap between tradition and modernity, they have not only created a superior product but also illuminated a pathway for the industry's future.
-This accomplishment speaks volumes about Gorkha Red Brick's value as a forward-looking enterprise. Their achievement extends beyond bricks, serving as an embodiment of progress and responsible production. With every brick produced using the Tunnel Kiln Technology, they are shaping a future that is not only promising but also sustainable.
+Gorkha Eco Brick's journey to this achievement has been guided by a clear vision. Their focus on innovation is a reflection of their determination to evolve beyond traditional brick-making practices. In successfully bridging the gap between tradition and modernity, they have not only created a superior product but also illuminated a pathway for the industry's future.
+This accomplishment speaks volumes about Gorkha Eco Brick's value as a forward-looking enterprise. Their achievement extends beyond bricks, serving as an embodiment of progress and responsible production. With every brick produced using the Tunnel Kiln Technology, they are shaping a future that is not only promising but also sustainable.
