--- a/content/photos.tex
+++ b/content/photos.tex
@@ -1,6 +1,6 @@
 \section{Photo Gallery}
 \vspace{2em}
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7624.HEIC.png}\hspace{5em}
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7625.HEIC.png}
@@ -15,7 +15,7 @@
 \end{figure}
 
 \newpage
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7640.HEIC.png}\hspace{5em}
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7642.HEIC.png}
@@ -29,7 +29,7 @@
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7641.HEIC.png}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7647.HEIC.png}\hspace{5em}
     \includegraphics[width=0.4\textwidth]{img/photos/IMG_7663.HEIC.png}
