--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage[margin=2.5cm]{geometry}
 \usepackage{changepage}
 \usepackage{gensymb}
+\usepackage{float}
+\usepackage{url}
 \hyphenation{contributed insightful inputs practical understanding comprehensive Niraula supervisor enriching discussions willingness acknowledge}
 \begin{document}
 
@@ -25,19 +27,9 @@
 \include{content/composition}
 \include{content/blockdiagram}
 \newpage
-\section{Recommendations of the System}
-% Recommendations for improving the brick manufacturing process.
-
-
-\subsection{For Packaging of Bricks}
-% Recommendations related to brick packaging.
-
-\section{Discussion and Conclusion}
-% Your discussion and conclusion about the brick factory case study.
-
-
+\include{content/Discussion}
 \include{content/photos}
-\section{References}
-% Your references go here.
+\include{content/References}
+
 
 \end{document}
