reference minor change

--- a/content/References.tex
+++ b/content/References.tex
@@ -6,5 +6,5 @@ CivilToday. (n.d.). Brick Composition: Ingredients with Functions. CivilToday. \
 https://civiltoday.com/civil-engineering-materials/brick/132-brick-composition-ingredients-with-functions
 
 \vspace{1em}
-GorkhaEcoRedBricks. (n.d. ). HomePage. GorkhaEcoRedBricks. \\
+GorkhaEcoRedBricks. (n.d. ). OfficialSite. GorkhaEcoRedBricks. \\
 http://gorkhachineseitta.com
