--- a/content/title.tex
+++ b/content/title.tex
@@ -5,7 +5,6 @@
 	\vspace{0.1in}
 	\LARGE{\textbf{Khwopa College Of Engineering}\\}
 	\vspace{0.1cm}
-%	\normalsize{Libali, Bhaktapur\\}
 	\large\textbf{Department of Computer Engineering}
 	\vspace{0.4in}
 	\begin{figure}[h]
@@ -23,7 +22,7 @@
 	
 	\large{\textbf{Visit Undertaken at}\\}
 		\normalsize{Gorkha Eco Red Bricks Company Pvt. Ltd.\\
-			Mahendrajyoti, Nepal\\
+		Basdol, Kavrepalanchowk, Nepal\\
 		}
 		\vspace{0.5in}
 	\large{\textbf{Submitted by:}}\\
