--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \include{content/about}
 \include{content/composition}
 \include{content/blockdiagram}
+\include{content/ProposedSystem}
 \newpage
 \include{content/Discussion}
 \include{content/photos}
