--- a/content/ProposedSystem.tex
+++ b/content/ProposedSystem.tex
@@ -6,7 +6,7 @@ The proposed system aims to enhance the existing process of monitoring temperatu
     \item Microprocessor
     \item Programmable Peripherial Interface (PPI) 
     \item Multiplexer
-    \item Analog To Digital COnverter (ADC)
+    \item Analog To Digital Converter (ADC)
     \item Liquid Level sensors
     \item Counter
 \end{itemize}
